Fix comment spacing

--- a/client/blog-client/src/styles/Home.css
+++ b/client/blog-client/src/styles/Home.css
@@ -1,3 +1,7 @@
+#home {
+  font-size: 1.25rem;
+}
+
 #home h1 {
   font-size: 4rem;
   line-height: 4rem;;
@@ -5,11 +9,13 @@
 }
 
 #home h2 {
-  margin: 0;
+  margin: 5px 0;
+  font-size: 2rem;
+  line-height: 2rem;;
 }
 
 #home h3 {
-  margin: 5px 0;
+  margin: 10px 0;
 }
 
 .home-header {
@@ -20,5 +26,5 @@
 }
 
 .post {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
